Fix issue with ion-refresher not showing refreshing image when used with ion-list

--- a/scss/_scaffolding.scss
+++ b/scss/_scaffolding.scss
@@ -171,6 +171,7 @@ body.grade-c {
   overflow: hidden;
   margin: auto;
   height: 60px;
+  width: 100%;
 
   .ionic-refresher-content {
     position: absolute;
